--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Gemini API 설정
-GEMINI_API_KEY=AIzaSyCueiYNTYB7ugARz4ZYS7jfnd6TVlU5pA0
+GEMINI_API_KEY=AI...
 GEMINI_MODEL=gemini-2.5-flash-image-preview
 
 # 애플리케이션 설정
